# concurrency-control-with-dynamodb

./: LICENSE  README.md  TODO.md  dev.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml
docs/architecture/c4/level_2_container/: payments_system.puml
docs/architecture/c4/level_2_container/container/: containers.puml
src/adapters/: dynamodb.py
src/database_locks/: __init__.py  pessimistic_lock.py  time.py
src/optimistic_payments/: domain.py  events.py  repository.py  use_cases.py
src/optimistic_payments/repository/: __init__.py  exceptions.py
src/optimistic_payments/repository/dynamodb/: __init__.py  dto.py  repository.py
src/optimistic_payments/repository/dynamodb/dto/: __init__.py  abstract.py  base.py  payment_intent.py  payment_intent_dto.py  payment_intent_event.py  payment_intent_event_dto.py
src/pessimistic_payments/: domain.py  payment_gateway.py  repository.py  use_cases.py
tests/: conftest.py
tests/database_locks/: conftest.py  test_dynamodb_pessimistic_lock.py
tests/optimistic_payments/: conftest.py  test_repository.py  test_use_cases.py
tests/optimistic_payments/use_cases/: test_change_payment_intent_amount.py  test_charge_payment_intent.py  test_create_payment_intent.py  test_request_payment_request_charge.py
tests/pessimistic_payments/: conftest.py  test_repository.py  test_use_cases.py
tests/pessimistic_payments/use_cases/: test_change_payment_intent_amount.py  test_charge_payment_intent.py  test_create_payment_intent.py
